--- a/app/src/main/res/layout/city_list_item.xml
+++ b/app/src/main/res/layout/city_list_item.xml
@@ -12,14 +12,14 @@
         app:layout_constraintLeft_toLeftOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/name_city_list_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:layout_margin="10dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
@@ -28,7 +28,7 @@
                 android:id="@+id/main_city_list_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:layout_margin="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/name_city_list_item"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/main_city_list_item"
-                app:layout_constraintTop_toTopOf="parent"
+
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -49,7 +49,6 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/desc_city_list_item"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -59,7 +58,6 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/temp_city_list_item"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -69,7 +67,6 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/feels_like_city_list_item"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -79,7 +76,6 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/pressure_city_list_item"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -89,7 +85,6 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/humidity_city_list_item"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -99,7 +94,6 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/wind_speed_city_list_item"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -109,7 +103,6 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/wind_direction_city_list_item"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
