--- a/app/src/main/res/layout/city_list.xml
+++ b/app/src/main/res/layout/city_list.xml
@@ -8,7 +8,9 @@
         android:id="@+id/content_city_list"
         android:visibility="invisible"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#FF5733"
+        android:padding="5dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_cities_city_list"
