--- a/app/src/main/res/layout/week_day_3hour_tem.xml
+++ b/app/src/main/res/layout/week_day_3hour_tem.xml
@@ -9,6 +9,61 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/img_3hour"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <TextView
+                android:id="@+id/desc_3hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/img_3hour"/>
+
+            <TextView
+                android:id="@+id/temp_3hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toBottomOf="@id/desc_3hour"
+                app:layout_constraintLeft_toRightOf="@id/img_3hour"/>
+
+            <TextView
+                android:id="@+id/pressure_3hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toBottomOf="@id/temp_3hour"
+                app:layout_constraintLeft_toRightOf="@id/img_3hour"/>
+
+            <TextView
+                android:id="@+id/humidity_3hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toBottomOf="@id/pressure_3hour"
+                app:layout_constraintLeft_toRightOf="@id/img_3hour"/>
+
+            <TextView
+                android:id="@+id/clouds_3hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toBottomOf="@id/humidity_3hour"
+                app:layout_constraintLeft_toRightOf="@id/img_3hour"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
