--- a/app/src/main/res/layout/week_day_3hour_tem.xml
+++ b/app/src/main/res/layout/week_day_3hour_tem.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="5dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_margin="10dp">
 
             <ImageView
                 android:id="@+id/img_3hour"
@@ -22,7 +26,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
             <TextView
-                android:id="@+id/desc_3hour"
+                android:id="@+id/time_3hour"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -30,11 +34,19 @@
                 app:layout_constraintLeft_toRightOf="@id/img_3hour"/>
 
             <TextView
+                android:id="@+id/desc_3hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/time_3hour"/>
+
+            <TextView
                 android:id="@+id/temp_3hour"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                app:layout_constraintTop_toBottomOf="@id/desc_3hour"
+                app:layout_constraintTop_toBottomOf="@id/time_3hour"
                 app:layout_constraintLeft_toRightOf="@id/img_3hour"/>
 
             <TextView
